# helloSDL

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/example/helloworld/: MyGame.java  StartActivity.java
app/src/main/java/com/example/util/: VirtualKeypad.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values-ko-rKR/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
